redis-assignment-gitops/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: python-api

spec:
  hosts:
  - "*"

  gateways:
  - python-api-gateway

  http:
  - match:
    - uri:
        prefix: /api

    route:
    - destination:
        host: python-api
        port:
          number: 80
